--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "personal-blog",
   "version": "0.1.0",
   "private": true,
-  "homepage":"http://alivarastepour.github.io",
+  "homepage": "http://alivarastepour.github.io",
   "dependencies": {
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
@@ -22,6 +22,7 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-reveal": "^1.2.2",
+    "react-router-dom": "^6.8.1",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.3",
     "typescript": "^4.5.2",
@@ -32,8 +33,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy" : "npm run build",
-    "deploy" : "gh-pages -d build"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
